2010-03-18  Sancho Lerena <slerena@artica.es>

    * include/js/integria_incident_search.js: Fixed to work on click and
    removed some debug stuff.

    * include/functions_form.php: Combo to show groups manage properly the All
    (any) group.

    * include/functions.php

    * integria_dbdata.sql: Autoincrement fix for project/task table due the
    internal insert for id < 0 and problems with id 0 in these tables.

    * operation/incidents/incident_detail.php: Adding a workunit now set the 
    incident to assigned to the user who creates the first WU.

    * godmode/grupos/configurar_grupo.php: Fixed inventory showed in the combo.

2010-03-18  Miguel de Dios <miguel.dedios@artica.es>

 	* include/js/integria_incident_search.js: fixed the javascript for the
 	select "Objects affected" when load from a select "Group". And empty this
 	select box in same action. 

2010-03-15  Miguel de Dios <miguel.dedios@artica.es>

 	* include/js/integria_incident_search.js: use the new parameters returns for
	correct search of ajax query group.
 
	* operation/group/group.php: now when it's correct search the inventory of
	group and serialize.

2010-03-12  Sancho Lerena <slerena@artica.es>

	* include/js/integria_incident_search.js: Fixed size of splash window.

	* install.php: on SQL errors, show line which give problems, easier
	to debug.

	* operation/group/group.php: Altered strings for be more human ready :)

	* integria_demo.sql: Insert of default users was giving problems.

2010-03-12  Miguel de Dios <miguel.dedios@artica.es>

	* include/js/integria_incident_search.js: fixed two things, erase the
	firebug trace, and fixed array index wrong.

2010-03-12  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: in the function "print_select" and
	"print_select_sql" added new parameter $disable for to disable select.  

	* include/js/integria_incident_search.js: changed source code for extract
	the id_user from select instead to old hidden input. 
