@@ -1,3 +1,12 @@
+2010-03-22  Sancho Lerena <slerena@artica.es>
+
+	* upgrade.sql: Add score field to tincidencia.
+
+	* operation/incidents/incident_detail.php: Added score field on closed
+	or resolved incidents.
+
+	* integria_db.sql: Added score field on incidencia.
+
 2010-03-18  Sancho Lerena <slerena@artica.es>
 
     * include/js/integria_incident_search.js: Fixed to work on click and
